--- a/index.html
+++ b/index.html
@@ -64,19 +64,20 @@
          /* Estilos para o Chat Widget */
          #chat-widget {
              position: fixed;
-             bottom: 1.5rem;
-             right: 1.5rem;
+             bottom: 1.5rem; /* 24px */
+             right: 1.5rem; /* 24px */
              width: 320px;
-             transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+             transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out; /* Ajustado tempo */
              opacity: 0;
              transform: translateY(20px) scale(0.95);
              z-index: 1000;
-             pointer-events: none;
+             pointer-events: none; /* Não interage enquanto escondido */
+             will-change: transform, opacity; /* Otimização para animação */
          }
          #chat-widget.visible {
              opacity: 1;
              transform: translateY(0) scale(1);
-             pointer-events: auto;
+             pointer-events: auto; /* Permite interação quando visível */
          }
          @media (max-width: 400px) {
              #chat-widget {
@@ -85,6 +86,28 @@
                  left: 1rem;
                  bottom: 1rem;
              }
+         }
+
+         /* Estilos Botão Flutuante WhatsApp */
+         #whatsapp-button {
+             /* Posicionamento similar ao widget, z-index menor */
+             position: fixed;
+             bottom: 1.5rem; /* 24px */
+             right: 1.5rem;  /* 24px */
+             z-index: 990; /* Abaixo do widget */
+             transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+             will-change: transform, opacity;
+         }
+         #whatsapp-button.hidden {
+             opacity: 0;
+             transform: scale(0.8);
+             pointer-events: none;
+         }
+         @media (max-width: 400px) {
+            #whatsapp-button {
+                bottom: 1rem;
+                right: 1rem;
+            }
          }
     </style>
     <script>
@@ -565,10 +588,17 @@
         </div>
     </div>
 
+    <button id="whatsapp-button" aria-label="Abrir chat" class="hidden fixed bottom-6 right-6 z-[990] bg-green-500 hover:bg-green-600 text-white p-3 rounded-full shadow-lg transition-all duration-300 transform hover:scale-110 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-400 dark:focus:ring-offset-nexus-dark">
+        <svg fill="currentColor" viewBox="0 0 16 16" class="w-6 h-6">
+           <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+        </svg>
+    </button>
+
     <script>
-        // --- Script do Menu Mobile ---
+        // --- Script do Menu Mobile (sem alterações) ---
         (() => {
-            const mobileMenuButton = document.querySelector('.md\\:hidden button[aria-label="Abrir menu"]');
+           // ... (código do menu mobile continua igual) ...
+           const mobileMenuButton = document.querySelector('.md\\:hidden button[aria-label="Abrir menu"]');
             const navLinks = document.querySelector('.hidden.md\\:flex');
             const mobileMenuContainer = document.getElementById('mobile-menu-container');
             if (!mobileMenuButton || !navLinks || !mobileMenuContainer) return;
@@ -627,17 +657,24 @@
              });
         })();
 
-        // --- Script do Chat Widget ---
+        // --- Script do Chat Widget e Botão Flutuante --- MODIFICADO ---
         (() => {
             const chatWidget = document.getElementById('chat-widget');
             const closeChatButton = document.getElementById('close-chat');
             const greetingElement = document.getElementById('chat-greeting');
             const chatOptions = document.querySelectorAll('.chat-option');
-            if (!chatWidget || !closeChatButton || !greetingElement || chatOptions.length === 0) return;
+            const whatsappButton = document.getElementById('whatsapp-button'); // Referência ao novo botão
 
-            // <<<<< IMPORTANTE: SUBSTITUA AQUI O NÚMERO EXEMPLO PELO SEU WHATSAPP >>>>>
-            const whatsappNumber = '5511999998888'; // Use formato internacional: 55 + DDD + Número
+            // Verifica se todos os elementos necessários existem
+            if (!chatWidget || !closeChatButton || !greetingElement || chatOptions.length === 0 || !whatsappButton) {
+                console.error("Elementos do Chat Widget ou Botão WhatsApp não encontrados.");
+                return; // Sai se algum elemento essencial faltar
+            }
 
+            // Número de WhatsApp ATUALIZADO (formato internacional: 55 + DDD + Número)
+            const whatsappNumber = '551157461222';
+
+            // 1. Define a saudação dinâmica
             const currentHour = new Date().getHours();
             let greeting = 'Olá! Como podemos ajudar?';
             if (currentHour >= 5 && currentHour < 12) greeting = 'Bom dia! ☀️ Como podemos ajudar?';
@@ -645,10 +682,38 @@
             else greeting = 'Boa noite! 🌙 Como podemos ajudar?';
             greetingElement.textContent = greeting;
 
-            setTimeout(() => chatWidget.classList.add('visible'), 1500);
+            // 2. Mostra o widget inicial após delay
+            // O botão flutuante começa escondido pela classe 'hidden' no HTML
+            setTimeout(() => {
+                chatWidget.classList.add('visible'); // Torna o widget visível
+            }, 1500); // Delay de 1.5 segundos
 
-            closeChatButton.addEventListener('click', () => chatWidget.classList.remove('visible'));
+            // 3. Funcionalidade de fechar o widget -> mostra o botão flutuante
+            closeChatButton.addEventListener('click', () => {
+                chatWidget.classList.remove('visible'); // Esconde o widget (efeito de fade/transform)
+                // Adiciona um pequeno delay para o botão aparecer após o widget sumir
+                setTimeout(() => {
+                   whatsappButton.classList.remove('hidden'); // Mostra o botão flutuante
+                   // Opcional: Força reflow para garantir que a transição funcione
+                   void whatsappButton.offsetWidth;
+                   // Define estilos para animação (se a classe hidden não usar !important)
+                   whatsappButton.style.opacity = '1';
+                   whatsappButton.style.transform = 'scale(1)';
+                }, 300); // Ajuste o tempo para coincidir com a transição do widget
+            });
 
+            // 4. Funcionalidade de abrir o widget (clicando no botão flutuante)
+            whatsappButton.addEventListener('click', () => {
+                // Aplica estilos para esconder o botão antes de adicionar a classe hidden
+                whatsappButton.style.opacity = '0';
+                whatsappButton.style.transform = 'scale(0.8)';
+                setTimeout(() => { // Espera a transição do botão para esconder e mostrar o widget
+                   whatsappButton.classList.add('hidden');
+                   chatWidget.classList.add('visible');    // Mostra o widget novamente
+                }, 300); // Tempo da transição do botão
+            });
+
+            // 5. Funcionalidade das opções do chat (abrir WhatsApp)
             chatOptions.forEach(button => {
                 button.addEventListener('click', () => {
                     const message = button.getAttribute('data-message');
@@ -657,6 +722,14 @@
                         const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
                         window.open(whatsappUrl, '_blank');
                     }
+                    // Opcional: Fechar widget e mostrar botão após clique na opção
+                    // chatWidget.classList.remove('visible');
+                    // setTimeout(() => {
+                    //     whatsappButton.classList.remove('hidden');
+                    //     void whatsappButton.offsetWidth;
+                    //     whatsappButton.style.opacity = '1';
+                    //     whatsappButton.style.transform = 'scale(1)';
+                    // }, 300);
                 });
             });
         })();
