--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     <div class="text-center md:text-left flex flex-col items-center md:flex-row md:items-start gap-6 group">
                         <div class="relative flex-shrink-0">
                             <img class="founder-img h-32 w-32 md:h-40 md:w-40 rounded-full object-cover shadow-xl border-4 border-white dark:border-gray-700 group-hover:border-nexus-blue transition-all duration-300 transform group-hover:scale-105"
-                                 src="https://via.placeholder.com/160x160/cccccc/888888?text=Foto+Gabriel" alt="Foto do CEO Gabriel Correia">
+                                 src="https://media.licdn.com/dms/image/v2/C4E03AQFenU1kPyWvHA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1647437613896?e=1750896000&v=beta&t=-ph4tXP-hV0MNRIGOilUlLSE772kEPbVIx-mJ3rzf_0" alt="Foto do CEO Gabriel Correia">
                             <div class="absolute bottom-1 right-1 bg-nexus-blue text-white p-1.5 md:p-2 rounded-full transform group-hover:scale-110 transition-transform duration-300 border-2 border-white dark:border-gray-700 shadow-md" title="Gestão e Projetos">
                                  <svg class="w-3.5 h-3.5 md:w-4 md:h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
                             </div>
@@ -420,7 +420,7 @@
                     <div class="text-center md:text-left flex flex-col items-center md:flex-row md:items-start gap-6 group">
                         <div class="relative flex-shrink-0">
                            <img class="founder-img h-32 w-32 md:h-40 md:w-40 rounded-full object-cover shadow-xl border-4 border-white dark:border-gray-700 group-hover:border-nexus-blue transition-all duration-300 transform group-hover:scale-105"
-                                 src="https://via.placeholder.com/160x160/cccccc/888888?text=Foto+Evanderson" alt="Foto do Co-Fundador Evanderson Silva">
+                                 src="https://i.imgur.com/ljUhPUH.jpeg" alt="Foto do Co-Fundador Evanderson Silva">
                            <div class="absolute bottom-1 right-1 bg-nexus-blue text-white p-1.5 md:p-2 rounded-full transform group-hover:scale-110 transition-transform duration-300 border-2 border-white dark:border-gray-700 shadow-md" title="Engenharia de Software, IA, ML">
                                 <svg class="w-3.5 h-3.5 md:w-4 md:h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 19.5V21M12 3v1.5m0 15V21m3.75-18v1.5M19.5 8.25h-1.5m-15 3.75h-1.5m15 0h-1.5m3.75 3.75h-1.5M12 19.5V21" />
