--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                            Tecnologia a Serviço do Seu Crescimento
                       </h2>
                       <p class="text-base sm:text-lg text-nexus-gray dark:text-nexus-dark-text mt-4 md:mt-5 max-w-xl md:max-w-2xl mx-auto">
-                           Entregamos valor em cada etapa do seu projeto digital.
+                           Entregamos valor em cada etapa do seu projeto.
                       </p>
                  </div>
                   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8">
